--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -1,20 +1,46 @@
 /*
+ * Reset
+ */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,
+address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,
+tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,
+thead,tr,th,td {
+    margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline;
+    background: transparent; }
+body {
+    line-height: 1; }
+ol,ul {
+    list-style: none; }
+blockquote, q {
+    quotes: none; }
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: ''; content: none; }
+:focus {
+    outline: 0; }
+ins { 
+    text-decoration: none; }
+del {
+    text-decoration: line-through; }
+table {
+    border-collapse: collapse; border-spacing: 0; }
+
+/*
  * Generic 
  */
 html {
-    margin: 0; padding: 0; height: 100%; }
+    height: 100%; }
 body {
-    font-size: 16px; margin: 0; padding: 0; height: 100%; width: 100%; 
-    font-family: 'Ubuntu', sans-serif; background: #eee; }
+    font-size: 16px; height: 100%; width: 100%; font-family: 'Ubuntu', sans-serif; 
+    background: #eee; }
 a {
     outline: none; text-decoration: none; color: #3c84ce ;}
-p {
-    margin: 0; padding: 0; }
 h1, h2, h3, h4, h5 {
     margin: 0; padding: 0; line-height: 100%; }
 h1 {
-    font-weight: normal; font-size: 5em; 
-    color: #474641; }
+    font-weight: normal; font-size: 5em; color: #474641; }
 h2 {
     font-weight: normal; font-size: 2em; 
     color: #474641; margin-bottom: 0.5em; line-height: 100%; }
@@ -47,6 +73,8 @@ html[xmlns] .clearfix {
     display: block; }
 .inline-block {
     display: inline-block; }
+.light-gray {
+    color: #777; }
 .padded-top-5 {
     padding-top: 5px !important; }
 .padded-top-10 {
@@ -59,6 +87,10 @@ html[xmlns] .clearfix {
     margin-bottom: 15px !important; }
 .margin-down-20 {
     margin-bottom: 20px !important; }
+.margin-down-30 {
+    margin-bottom: 30px !important; }
+.margin-down-40 {
+    margin-bottom: 40px !important; }
 .round-2 {
     border-radius: 2px; }
 .round-3 {
